--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <script src="fromWhere.js" charset="utf-8"></script>
     <script src="findItemOver20.js" charset="utf-8"></script>
     <script src="mostProfitableDepartment.js" charset="utf-8"></script>
+    <script src="wordGame.js" charset="utf-8"></script>
+    <script src="findItemsOver.js" charset="utf-8"></script>
 
     <!-- followed by the tests -->
     <script src="test/greet.test.js" charset="utf-8"></script>
@@ -55,6 +57,9 @@
     <script src="test/fromWhere.test.js" charset="utf-8"></script>
     <script src="test/findItemsOver2.test.js" charset="utf-8"></script>
     <script src="test/mostProfitableDepartment.test.js" charset="utf-8"></script>
+    <script src="test/wordGame.test.js" charset="utf-8"></script>
+    <script src="test/findItemsOver.test.js" charset="utf-8"></script>
+
 
     <script>
         // configure and run mocha
